fix:left nav input color to white for high contrast fsi

--- a/ui.apps/src/main/content/jcr_root/apps/guides-components/clientlibs/clientlib-hfm/clientlib-base-common/css/navigation2.less
+++ b/ui.apps/src/main/content/jcr_root/apps/guides-components/clientlibs/clientlib-hfm/clientlib-base-common/css/navigation2.less
@@ -278,6 +278,10 @@ html.adobeguides-text-size {
 border: 1px solid var(--border-grey);
     background: var(--input-bg);
 
+         input {
+          color: var(--white-color);
+        }
+
     }}}
  }
   html#adobeguides-dark-contrast {
